baml_language/crates/baml_tests/snapshots/basic_types/baml_tests__basic_types__03_hir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.ClassAttributes {
  name: string
}
class user.FieldAttributes {
  money: int
  currency: string
  name: string
  summary: string
  details: string?
  state: string
  multiple: string?
}
function user.GetMixedList() -> int | string[]  [llm] {
  baml.llm.call_llm_function(GPT4, "GetMixedList", map {  })
}
function user.GetMixedList$build_request() -> baml.http.Request  [expr] {
  baml.llm.build_request("GetMixedList", map {  })
}
function user.GetMixedList$render_prompt() -> baml.llm.PromptAst  [expr] {
  baml.llm.render_prompt("GetMixedList", map {  })
}
function user.GetMixedMap() -> map<string, int | string>  [llm] {
  baml.llm.call_llm_function(GPT4, "GetMixedMap", map {  })
}
function user.GetMixedMap$build_request() -> baml.http.Request  [expr] {
  baml.llm.build_request("GetMixedMap", map {  })
}
function user.GetMixedMap$render_prompt() -> baml.llm.PromptAst  [expr] {
  baml.llm.render_prompt("GetMixedMap", map {  })
}
function user.GetStatus() -> user.Status  [llm] {
  baml.llm.call_llm_function(GPT4, "GetStatus", map {  })
}
function user.GetStatus$build_request() -> baml.http.Request  [expr] {
  baml.llm.build_request("GetStatus", map {  })
}
function user.GetStatus$render_prompt() -> baml.llm.PromptAst  [expr] {
  baml.llm.render_prompt("GetStatus", map {  })
}
function user.GetUser(id: int) -> user.User  [llm] {
  baml.llm.call_llm_function(Client { name: "openai/gpt-4o", client_type: baml.llm.ClientType.Primitive, sub_clients: [], retry: null, counter: 0 }, "GetUser", map { "id": id })
}
function user.GetUser$build_request(id: int) -> baml.http.Request  [expr] {
  baml.llm.build_request("GetUser", map { "id": id })
}
function user.GetUser$render_prompt(id: int) -> baml.llm.PromptAst  [expr] {
  baml.llm.render_prompt("GetUser", map { "id": id })
}
class user.User {
  id: int
  name: string
  email: string
}
enum user.Status {Active, Inactive}
type user.MixedList = int | string[]
type user.MixedMap = map<string, int | string>
type user.OptionalCode = 200?
type user.OptionalFlag = true?
type user.OptionalRole = "admin"?
type user.OptionalRoleList = "writer"[]?
type user.ReallyLongMapType = map<string, "fieopwaiwjepfoiwajpoweijf" | int | string | bool | float | int[] | string[] | map<string, int | string> | map<string, map<string, int | string>> | map<string, map<string, map<string, int | string>>> | map<string, map<string, map<string, map<string, int | string>>>>>
type user.Role = "user" | "assistant" | "system"
type user.RoleList = "reader"[]
type user.UnionOfArrays = int[] | string[]
