baml_language/crates/baml_tests/snapshots/basic_types/baml_tests__basic_types__04_7_mir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 1008
---
=== MIR2 ===
fn user.GetUser(id: int) -> user.User {
    // Locals:
    let _0: user.User // _0 // return
    let _1: int // id // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "id": copy _1 };
        _0 = call const fn baml.llm.call_llm_function(const "GetUser", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.GetMixedMap() -> map<string, int | string> {
    // Locals:
    let _0: map<string, int | string> // _0 // return
    let _1: map<string, unknown>

    bb0: {
        _1 = {  };
        _0 = call const fn baml.llm.call_llm_function(const "GetMixedMap", copy _1) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.GetStatus() -> user.Status {
    // Locals:
    let _0: user.Status // _0 // return
    let _1: map<string, unknown>

    bb0: {
        _1 = {  };
        _0 = call const fn baml.llm.call_llm_function(const "GetStatus", copy _1) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.GetMixedList() -> int | string[] {
    // Locals:
    let _0: int | string[] // _0 // return
    let _1: map<string, unknown>

    bb0: {
        _1 = {  };
        _0 = call const fn baml.llm.call_llm_function(const "GetMixedList", copy _1) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}
