baml_language/crates/baml_tests/snapshots/basic_types/baml_tests__basic_types__04_thir.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
=== TYPE INFERENCE ===
function GetStatus() -> unknown
└─ LLM Body (client: GPT4)

function GetUser(id: int) -> unknown
├─ param id: int
└─ LLM Body (client: GPT4)
