baml_language/crates/baml_tests/snapshots/basic_types/baml_tests__basic_types__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.FieldAttributes {
  money: int @description("In USD")
  currency: string @alias("currency_code")
  name: string @skip
  summary: string
  details: string?
  state: string
  multiple: string? @description("Multiple attributes") @alias("multiple_alias") @stream.done @stream.not_null
}
class user.ClassAttributes {
  name: string
}
function user.GetUser(id: int) -> user.User throws never {
  baml.llm.call_llm_function<T>(baml.llm.Client { name: "openai/gpt-4o", client_type: baml.llm.ClientType.Primitive, sub_clients: [], retry: null, counter: 0 }, "GetUser", map { "id": id }) : user.User
}
function user.GetUser$render_prompt(id: int) -> baml.llm.PromptAst throws never {
  baml.llm.render_prompt(baml.llm.Client { name: "openai/gpt-4o", client_type: baml.llm.ClientType.Primitive, sub_clients: [], retry: null, counter: 0 }, "GetUser", map { "id": id }) : baml.llm.PromptAst
}
function user.GetUser$build_request(id: int) -> baml.http.Request throws never {
  baml.llm.build_request(baml.llm.Client { name: "openai/gpt-4o", client_type: baml.llm.ClientType.Primitive, sub_clients: [], retry: null, counter: 0 }, "GetUser", map { "id": id }) : baml.http.Request
}
function user.GetStatus() -> user.Status throws never {
  baml.llm.call_llm_function<T>(GPT4, "GetStatus", map {  }) : user.Status
  !! 127..173: unresolved name: GPT4
}
function user.GetStatus$render_prompt() -> baml.llm.PromptAst throws never {
  baml.llm.render_prompt(GPT4, "GetStatus", map {  }) : baml.llm.PromptAst
  !! 127..173: unresolved name: GPT4
}
function user.GetStatus$build_request() -> baml.http.Request throws never {
  baml.llm.build_request(GPT4, "GetStatus", map {  }) : baml.http.Request
  !! 127..173: unresolved name: GPT4
}
function user.GetMixedList() -> (int | string)[] throws never {
  baml.llm.call_llm_function<T>(GPT4, "GetMixedList", map {  }) : (int | string)[]
  !! 173..308: unresolved name: GPT4
}
function user.GetMixedList$render_prompt() -> baml.llm.PromptAst throws never {
  baml.llm.render_prompt(GPT4, "GetMixedList", map {  }) : baml.llm.PromptAst
  !! 173..308: unresolved name: GPT4
}
function user.GetMixedList$build_request() -> baml.http.Request throws never {
  baml.llm.build_request(GPT4, "GetMixedList", map {  }) : baml.http.Request
  !! 173..308: unresolved name: GPT4
}
function user.GetMixedMap() -> map<string, int | string> throws never {
  baml.llm.call_llm_function<T>(GPT4, "GetMixedMap", map {  }) : map<string, int | string>
  !! 308..410: unresolved name: GPT4
}
function user.GetMixedMap$render_prompt() -> baml.llm.PromptAst throws never {
  baml.llm.render_prompt(GPT4, "GetMixedMap", map {  }) : baml.llm.PromptAst
  !! 308..410: unresolved name: GPT4
}
function user.GetMixedMap$build_request() -> baml.http.Request throws never {
  baml.llm.build_request(GPT4, "GetMixedMap", map {  }) : baml.http.Request
  !! 308..410: unresolved name: GPT4
}
class user.User {
  id: int
  name: string
  email: string
}
enum user.Status
type user.Role = "user" | "assistant" | "system"
type user.OptionalRole = "admin"?
type user.RoleList = "reader"[]
type user.OptionalRoleList = "writer"[]?
type user.OptionalCode = 200?
type user.OptionalFlag = true?
type user.MixedList = (int | string)[]
type user.MixedMap = map<string, int | string>
type user.UnionOfArrays = int[] | string[]
type user.ReallyLongMapType = map<string, "fieopwaiwjepfoiwajpoweijf" | int | string | bool | float | int[] | string[] | map<string, int | string> | map<string, map<string, int | string>> | map<string, map<string, map<string, int | string>>> | map<string, map<string, map<string, map<string, int | string>>>>>
